# dmetrics

./: .gitignore  README.md  meson.build  pyproject.toml
.github/workflows/: build.yml
msvc/: DMetrics.sln  DMetrics.vcxproj  DMetrics.vcxproj.filters
src/: dmetrics.cpp
